ghc-4335c07/testsuite/tests/typecheck/should_compile/T11736.hs
{-# LANGUAGE UnboxedTuples #-}

module T11736 where

import Data.Proxy

foo :: Proxy (#,#)
foo = Proxy
